<resources>
    <string-array name="month_array">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>اذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </string-array>
    <string-array name="year_array">
        <item>۱۳۹۵</item>
        <item>۱۳۹۶</item>
        <item>۱۳۹۷</item>
    </string-array>
    <string name="basket_h">&#xf073;</string>
    <string name="basket_v">&#xf017;</string>
    <string name="basket_buys">&#xf218;</string>
    <string name="basket_dates">&#xf073;</string>
    <string name="basket_pre_submit">&#xf2bb;</string>
    <string name="basket_submit">&#xf07a;</string>
    <string name="fab_description">FAB button description</string>
    <string name="part_one">Part One</string>
    <string name="part_two">Part Two</string>
    <string name="part_three">Part Three</string>
    <string name="tab_2">جدیدترین ها</string>
    <string name="tab_1">پرفروش ها</string>
    <string name="search">جستجو</string>
    <string name="p0">2,000</string>
    <string name="p1">1,800 تومان</string>
    <string name="kala">کالا</string>
    <string name="khad">جدیدترین خدمات</string>
    <string name="last">در حال اتمام</string>
    <string name="shegeft">شگفت انگیز</string>
    <string name="kamyab">کمیاب</string>
    <string name="toman">ریال</string>
    <string name="reg_or_sign">ورود یا ثبت نام</string>
    <string name="setting">تنظیمات</string>
    <string name="purches">سفارشات</string>
    <string name="info">خدمات مشتریان</string>
    <string name="aboutus">درباره ما</string>
    <string name="num_sale">تعداد فروش</string>
    <string name="shopping">خرید</string>
    <string name="main_cat">دسته اصلی</string>
    <string name="register">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="password">رمز عبور</string>
    <string name="email">نام کاربری یا پست الکترونیک</string>
    <string name="fill">خالی است</string>
    <string name="plz_fill">مشخصات کامل نیست</string>
    <string name="mob_error">شماره موبایل یازده رقم میباشد</string>
    <string name="invalid_email">ایمیل اشتباه است</string>
    <string name="register_error">ثبت نام انجام نشد</string>
    <string name="save_pass">در ابن دستگاه مرا به خاطر بسپار</string>
    <string name="enter_user_pass">نام کاربری و پسورد را وارد کنید</string>
    <string name="wrong_user_pass">نام کاربری یا پسورد اشتباه است</string>
    <string name="no_internet">عدم اتصال به اینترنت</string>
    <string name="user">کاربر</string>
    <string name="exit">خروج کاربر</string>
    <string name="edit">مشخصات کاربری</string>
    <string name="copon">کوپن های من</string>
    <string name="wallet">کیف پول</string>
    <string name="add_to_basket">افزودن به سبد</string>
    <string name="pay_online">پرداخت انلاین</string>
    <string name="pay_by_wallet">پرداخت با کیف پول</string>
    <string name="pay">پرداخت</string>
    <string name="cancel">انصراف</string>
    <string name="total">قمیت کل</string>
    <string name="subtotal">قیمت خرید</string>
    <string name="shipping">قیمت با تخفیف</string>
    <string name="seller">فروشنده</string>
    <string name="buy">خرید</string>
    <string name="select_all">انتخاب تمامی کالا یا خدمات</string>
    <string name="factor">فاکتور</string>
    <string name="product">کالا , خدمات</string>
    <string name="total_subtotal">کل مبلغ خرید</string>
    <string name="total_shipping">کل مبلغ با تخفیف</string>
    <string name="total_total">مبلغ نهایی</string>
    <string name="factor0">فاکتور (0) </string>
    <string name="total_total_pay">0 تومان</string>
    <string name="added_before">در سبد موجود است</string>
    <string name="total_total_pay_btn0">خرید(0)</string>
    <string name="press_twice_to_exit">برای خروج مجدد بازگشت را بزنید</string>
    <string name="near">نزدیکترین ها</string>
    <string name="gps_not_enabled">جی پی اس فعال نیست</string>
    <string name="enter_value_by_toman">مبلغ خرید به تومان</string>
    <string name="pay_bag">پرداخت از کیف پول</string>
    <string name="pay_bank">پرداخت از درگاه بانک</string>
    <string name="copon_make">کوپن ها یک جا ایجاد شود</string>
    <string name="pay_info">شیوه پرداخت را انتخاب کنید</string>
    <string name="enable">فعال کردن</string>
    <string name="num_copon">تعداد کوپن</string>
    <string name="radio_male">مرد</string>
    <string name="radio_female">زن</string>
    <string name="edit_error">ویرایش انجام نشد</string>
    <string name="select">انتخاب</string>
    <string name="birth">تاریخ تولد</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="address">آدرس</string>
    <string name="extime">زمان تا پایان</string>
    <string name="save">ذخیره</string>
    <string name="tel_home">تلفن منزل</string>
    <string name="address_home">آدرس منزل</string>
    <string name="tel_job">تلفن محل کار</string>
    <string name="address_job">آدرس محل کار</string>
    <string name="day">روز</string>
    <string name="expire">زمان فروش به پایان رسید</string>
    <string name="filter_by_date">فیلتر با تاریخ</string>
    <string name="shegeft_2">شگفت</string>
    <string name="send_copon">ارسال با پیک</string>
    <string name="cancel_copon">ابطال کوپن</string>
    <string name="cancel_copon_zero">ابطال کوپن (0)</string>
    <string name="forget_pass">پسورد را فراموش کرده ام</string>
    <string name="copon_code">کد کوپن</string>
    <string name="copon_not_canceled">کوپن های باطل نشده</string>
    <string name="copon_canceled">باطل شده ها</string>
    <string name="share">اشتراک گذاری</string>
    <string name="copon_exist">این کوپن هم اکنون در لیست موجود است</string>
    <string name="not_done">انجام نشد</string>
    <string name="discount">تخفیف</string>
    <string name="viewz">دیدن</string>
    <string name="other_option">انتخاب دیگر</string>
    <string name="add_basket">افزودن به سبد</string>
    <string name="my_copon">کوپن های من</string>
    <string name="main_page">خانه</string>
    <string name="shiraz">شیراز</string>
    <string name="takhfif">تخفیف</string>
<string name="home">دسته بندی</string>
    <string name="wrong_email_mobile">ایمیل یا شماره موبایل اشتباه هست</string>
    <string name="done">انجام شد</string>
    <string name="enter_mobile_email">ایمیل یا شماره موبایل</string>
    <string name="send">ارسال</string>
    <string name="plz_wait">صبر کنید</string>
    <string name="close">بستن</string>
    <string name="enable_net_gps">اینترنت یا جی پی اس فعال نیست</string>
<string name="app_name_en">شهر نرم افزار</string>
    <string name="welcome_to">خوش امدید</string>
    <string name="update">بروزرسانی</string>
    <string name="update_note">شما ملزم به بروزرسانی هستید</string>
    <string name="updating">در حال دانلود و بروزرسانی</string>
    <string name="enable_gps">فعال کردن</string>
    <string name="to_shopping_end">تا پایان زمان فروش</string>
    <string name="done_and_will_send">انجام شد و برای شما ارسال میشود</string>
    <string name="ic_shopping_basket">&#xe14e;</string>
    <string name="ic_keyboard">&#xe0c3;</string>
    <string name="ic_keyboard_alt">&#xe0c4;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_keyboard_arrow_up">&#xe0c8;</string>
    <string name="ic_keyboard_backspace">&#xe0c9;</string>
    <string name="ic_keyboard_capslock">&#xe0ca;</string>
    <string name="ic_keyboard_control">&#xe0cb;</string>
    <string name="ic_keyboard_hide">&#xe0cc;</string>
    <string name="ic_keyboard_return">&#xe0cd;</string>
    <string name="ic_keyboard_tab">&#xe0ce;</string>
    <string name="ic_keyboard_voice">&#xe0cf;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_sd_storage">&#xe141;</string>
    <string name="ic_search">&#xe142;</string>
    <string name="copon_entered">کوپن های ثبت نشده</string>
    <string name="copon_checked">کوپن های ثبت شده</string>
    <string name="no_responce">پاسخی دریافت نشد</string>
    <string name="notfiy_and_mesage">اعلانات و پیام ها</string>
    <string name="general">عمومی</string>
    <string name="notfiy_and_mesage_silent">اعلانات و پیام ها بدون صدا</string>
    <string name="notfiy_and_mesage_silentـby_vib">اعلانات و پیام ها بدون صدا با ویبره</string>
    <string name="notfiy_and_mesage_silent_without_vib">اعلانات و پیام ها بدون صدا و ویبره</string>
    <string name="notfiy_and_mesage_des">اعلانات و پیام ها با صدا با ویبره</string>
    <string name="notfiy_and_mesage_silent_des_without_vib">اعلانات و پیام ها بدون صدا و ویبره</string>
    <string name="notfiy_and_mesage_silent_des_by_vib">اعلانات و پیام ها بدون صدا با ویبره</string>
    <string name="clear_cache_data">پاک کردن دیتا</string>
    <string name="check">تایید</string>
    <string name="description">توضیحات</string>
    <string name="condition">شرایط</string>
    <string name="details">جزییات</string>
    <string name="newest">جدیدترین ها</string>
    <string name="most">پربازیدترین ها</string>
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="scan_barcode">اسکن</string>
    <string name="type_barcode">تایپ</string>
    <string name="search_by_cate">جستجو با دسته بندی</string>
    <string name="all_kala">تمام کالاها</string>
    <string name="all_cate">تمام دسته ها</string>
    <string name="your_location">جستجوی موقعیت</string>
    <string name="all_kala_and_service">تمام کالا و خدمات</string>
    <string name="kala_and_service">کالا و خدمات</string>
    <string name="my_loc">جستجو در موقعیت من</string>
    <string name="load_more">بیشتر</string>
    <string name="not_loc_found">چیزی پیدا نشد</string>
    <string name="copon_details">جزییات کوپن</string>
    <string name="copon_cancel">ابطال کوپن</string>
    <string name="msg_and_notify">اعلانات و پیام ها</string>
    <string name="last_search">اخرین جستجو ها</string>
    <string name="plz_try_new_search">لطفا چیز دیگری جستجو کنید</string>
    <string name="sorry_no">متاسفانه چیزی برای</string>
    <string name="found">پیدا نشد</string>
    <string name="your_location_name">موقعیت شما</string>
    <string name="copons">کوپن ها</string>
    <string name="kalas">کالاها</string>
    <string name="no_copon">کوپنی نیست</string>
    <string name="fill_your_account_with_copon">حساب خود را با بهترین ها پر کنید</string>
    <string name="no_kalas">کالای نیست</string>
    <string name="service">خدمات</string>
    <string name="all_service">تمام خدمات</string>
    <string name="no_notify">اعلان یا پیامی موجود نیست</string>
    <string name="num_view">تعداد مشاهده</string>
    <string name="remain_time">زمان باقی مانده</string>
    <string name="used_num_sold">استفاده شده</string>
    <string name="used_adm_sold">پرداختی به فروشگاه</string>
    <string name="un_used_num">استفاده نشده</string>
    <string name="exp_date">تاریخ انقضا</string>
    <string name="bdate">تاریخ خرید</string>
    <string name="end_date">تاریخ پایان</string>
    <string name="start_date">تاریخ شروع</string>
    <string name="buyer">خریدار</string>
    <string name="use_date">تاریخ استفاده</string>
    <string name="server_not_response">عدم اتصال به اینترنت یا خطای سرور</string>
    <string name="retry">تلاش مجدد</string>
    <string name="viewed">مشاهده شد</string>
    <string name="mobile">همراه</string>
    <string name="active">فعال سازی</string>
    <string name="mobile_to_active">شمارهمراه </string>
    <string name="month">ماه</string>
    <string name="year">سال</string>
</resources>