<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ir.tahasystem.music.app.custom.TextViewLight
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/color_primary" />


            <ir.tahasystem.music.app.custom.NumberPicker
                android:id="@+id/pick_month"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="130dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ir.tahasystem.music.app.custom.TextViewLight
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/color_primary" />

            <ir.tahasystem.music.app.custom.NumberPicker
                android:id="@+id/pick_year"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ir.tahasystem.music.app.custom.ButtonBold
            android:id="@+id/pick_btn_close"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@drawable/bg_btn_selector"
            android:drawableLeft="@drawable/close"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/close"
            android:textColor="#fff"
            android:textStyle="bold" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"></View>

        <ir.tahasystem.music.app.custom.ButtonBold
            android:layout_weight="50"
            android:id="@+id/pick_btn_select"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@drawable/bg_btn_selector"
            android:drawableLeft="@drawable/check"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/select"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>